# noted

./: .babelrc  .env  .env-devel  .eslintrc.yaml  .eslintrc.yml  .flowconfig  .gitignore  .mergify.yml  .prettierrc.yaml  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Procfile  README.md  babel.config.js  bors.toml  codecov.yml  commitlint.config.js  jest.config.js  knexfile.js  package-lock.json  package.json  rustfmt.toml  schema.graphql  tsconfig.json  tsconfig.webpack.json  webpack.common.js  webpack.config.base.ts  webpack.config.js  webpack.config.ts  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.circleci/scripts/: install-kcov.sh
.github/: FUNDING.yml  config.yml  dependabot.yml
.github/workflows/: ci.yaml  codeql-analysis.yml
.husky/: commit-msg  pre-commit
ci/github-actions/: ci.yaml
db/: Cargo.toml
db/migrations/2019-03-20-002131_add_tags/: down.sql  up.sql
db/migrations/2019-03-31-032207_add_row_timestamps/: down.sql  up.sql
db/migrations/2019-03-31-033611_add_users/: down.sql  up.sql
db/migrations/2019-04-13-044926_drop_dummy_user/: down.sql  up.sql
db/migrations/2019-04-24-223132_subnotes/: down.sql  up.sql
db/migrations/2019-04-26-020705_fix_note_constraint/: down.sql  up.sql
db/migrations/2019-04-27-015853_add_archived_to_notes/: down.sql  up.sql
db/migrations/2019-05-03-015724_actually_fix_note_constraint/: down.sql  up.sql
db/migrations/2019-07-14-221359_add_pinning/: down.sql  up.sql
db/src/: error.rs  lib.rs  models.rs  schema.rs
eslint_rules/: ensure-import-consistency.js
expand-yaml-anchors/: Cargo.toml
expand-yaml-anchors/src/: main.rs
js/: api.ts  common.scss  index.ejs  index.tsx  setupTests.ts  theme.ts  types.d.ts
js/__mocks__/: axios.ts  hastscript.ts  mousetrap.js  react-markdown.tsx  react-router-dom.ts  react.tsx  rehype-raw.ts  remark-directive.ts  remark-gfm.ts  styleMock.js  unist-util-visit.ts
js/__mocks__/@toast-ui/: react-editor.tsx
js/app/: App.test.tsx  App.tsx  Init.tsx  Pages.test.tsx  Pages.tsx  theme.ts
js/app/header/: Header.test.tsx  Header.tsx
js/components/: App.jsx  App.tsx  App.tsx.scss  App.tsx.scss.d.ts  AppBody.tsx  AutoLink.tsx  BindKeyboard.jsx  BindKeyboard.test.tsx  BindKeyboard.tsx  ChipInput.tsx  ConfirmationDialog.test.tsx  ConfirmationDialog.tsx  FilteredNoteList.tsx  Header.tsx  Init.tsx  Loading.tsx  LogIn.tsx  Note.jsx  Note.tsx  Note.tsx.scss  Note.tsx.scss.d.ts  NoteEditor.tsx  NoteList.tsx  NoteList.tsx.scss  NoteList.tsx.scss.d.ts  SearchInput.tsx  SingleNote.tsx  Tag.test.tsx  Tag.tsx  Tags.jsx  Tags.tsx  Tags.tsx.scss  Tags.tsx.scss.d.ts  test-utils.tsx
js/components/__tests__/: App.tsx  AppBody.tsx  AutoLink.tsx  BindKeyboard.tsx  ConfirmationDialog.tsx  FilteredNoteList.tsx  Header.tsx  Note.tsx  NoteEditor.tsx  NoteList.tsx  SearchInput.tsx
js/components/core/: BindKeyboard.test.tsx  BindKeyboard.tsx  ChipInput.tsx  ConfirmationDialog.test.tsx  Directive.test.tsx  Directive.tsx  (+5 more)
js/data/: actions.ts  api.ts  api_types.ts  reducers.ts  selectors.ts  store.ts  test-utils.ts  types.ts  utils.forTesting.ts
lib/: relay-runtime.js
migrations/: 20171124230911_init.js  20171125145523_add_last_seen.js  20171126203400_add_cards.js
migrations/20170504015835_create_cards/: down.sql  up.sql
migrations/20170516043101_rename_cards_fields/: down.sql  up.sql
migrations/20170901204406_set_card_title_not_null/: down.sql  up.sql
noted/: .prettierrc.yaml  Cargo.toml  webpack.config.js
noted/js/: index.js
noted/js/components/: BindKeyboard.jsx
noted/migrations/2019-03-13-010748_create_notes/: up.sql
noted/src/: api.rs  error.rs  lib.rs  schema.rs
noted_linker/: Cargo.toml
noted_linker/src/: lib.rs
src/: api.rs  auth.js  auth.rs  cache.rs  current_user.rs  error.rs  google.rs  index.js  lib.rs  logger.js  main.rs  middleware.rs  models.rs  routes.rs  session.rs  ui.rs  util.js
src/api/: cards.rs  current_user.rs  handler.rs  mod.rs  notes.rs  user.rs  users.rs
src/graphql/: CardType.js  Q.js  UserType.js  index.js  schema.js
src/models/: Card.js  User.js  bookshelf.js  card.rs  mod.rs  user.rs
static/: 404.html  index.html  index.pug  session_key.devel
static/favicon/: site.webmanifest
tools/: build  generate_api_types.js  writeSchema.js
ui/: entry.jsx  index.ejs  routes.jsx
ui/components/: App.jsx  Card.jsx  Cards.jsx  ErrorView.jsx  EventManager.jsx  LogInPlease.jsx  NotificationCenter.jsx
views/: index.pug
(+125 files in other folders)
