[package]
authors = ["Zach Bush <zach@zmbush.com>"]
edition = "2018"
name = "noted"
version = "0.1.0"

[workspace]
members = ["db", "expand-yaml-anchors"]

[dependencies]
chrono = "0.4.19"
clap = "2.33.3"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
failure = "0.1.8"
fern = "0.6.0"
futures = "0.3.18"
gotham = "0.7.1"
gotham_derive = "0.7.0"
http = "0.2"
hyper = "0.14.12"
lazy_static = "1.4.0"
log = "0.4.14"
noted_db = {path = "./db"}
r2d2 = "0.8.9"
redis = "0.21.4"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
# simple_logger = "1.2.0"

[dev-dependencies]
cookie = {version = "0.15.1", features = ["percent-encode"]}
