[package]
authors = ["Zach Bush <zach@zmbush.com>"]
description = "Backend server for noted.zmbush.com"
edition = "2018"
name = "noted"
version = "0.1.0"

[workspace]
members = ["db", "expand-yaml-anchors"]

[dependencies]
actix-files = "0.5.0"
actix-http = "2.2.1"
actix-redis = "0.9.2"
actix-rt = "1.1.1"
actix-session = "0.4.1"
actix-web = "3"
anyhow = "1.0.59"
chrono = "0.4.19"
diesel = {version = "1.4.8", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
failure = "0.1.8"
fern = "0.6.0"
futures = "0.3.18"
http = "0.2"
hyper = "0.14.16"
log = "0.4.14"
noted_db = {path = "./db"}
r2d2 = "0.8.9"
redis = "0.21.4"
schemars = {version = "0.8.8", features = ["preserve_order"]}
serde = "1.0.132"
serde_derive = "1.0.130"
serde_json = "1.0.73"
structopt = "0.3.25"
thiserror = "1.0.30"
time = "0.2"

[dev-dependencies]
cookie = {version = "0.16.0", features = ["percent-encode"]}
