[package]
name = "noted_db"
version = "0.1.0"
authors = ["Zach Bush <zach@zmbush.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.2", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.14.1"
lazy_static = "1.3.0"
serde = "1.0.121"
serde_derive = "1.0.98"
chrono = { version = "0.4.7", features = ["serde"] }
log = "0.4.8"
rust-crypto = "0.2.36"
r2d2 = "*"
gotham = "*"
hyper = "*"
serde_json = "*"

[dev-dependencies]
serde_json = "1.0.40"
