[package]
name = "noted"
version = "0.1.0"
authors = ["Zach Bush <zach@zmbush.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.1", features = ["postgres", "r2d2"] }
dotenv = "0.13.0"
iron = "0.6.0"
router = "0.6.0"
mount = "0.4.0"
staticfile = "0.5.0"
lazy_static = "1.3.0"

actix-web = "0.7.16"
log = "0.4.6"
simple_logger = "1.0.1"
clap = "2.32.0"
failure = "0.1.3"
serde = "1.0.60"
serde_derive = "1.0"
serde_json = "1.0"
owning_ref = "0.4.0"

[patch.crates-io.actix-web]
git = 'https://github.com/zmbush/actix-web'
branch = 'master'
